Fix an issue causing extra spacing

--- a/src/components/Header/header.module.css
+++ b/src/components/Header/header.module.css
@@ -117,7 +117,7 @@
         display: block;
         position:absolute;
         top: 64px;
-        right: -200px;
+        right: 0;
         transition: all 0.1s ease-in-out;
         z-index: 1;
         opacity: 0;
